--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <TITLE>진료부 심폐소생술 교육</TITLE>
 </HEAD>
 <BODY>
-<img src="https://user-images.githubusercontent.com/131942265/234765095-8c7b2a46-826e-4e9b-b0be-8a84af076376.jpg"></img>
+<img src="https://github.com/eduteam8814/CPR/assets/131942265/39dd6cb3-0db2-4c76-86c7-16b9fd6fe53c"></img>
 </BODY>
 </HTML>
